--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.horizontalFrame {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-flow: row wrap;
+}
+
+footer img {
+  width: 80px;
+  height: 100%;
+  margin-top: 40px;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+.verticalFrame {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.nav li {
+  display: inline;
+}
+
+.lg-gap {
+  gap: 8vw;
+}
+.md-gap {
+  gap: 2vw;
+}
+
+.center {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.middle {
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav a:link {
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.nav a:hover {
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.nav a:active {
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.nav a:visited {
+  font-weight: 600;
+  text-decoration: none;
 }
