--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Markazi Text', 'Karla';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +8,37 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.grid {
+  display: grid;
+  grid-template-areas: "head"
+                       "main"
+                       "main"
+                       "main"
+                       "main"
+                       "footer";
+  grid-template-rows: min(100px, 1fr) repeat(5, 1fr);
+  grid-template-columns: repeat(12, 1fr);
+  place-items: center;
+}
+
+.mainItem {
+  display: grid;
+  grid-column: span 12;
+  grid-row: 2 / span 4;
+  grid-template-columns: subgrid;
+  grid-template-rows: subgrid;
+}
+
+.fullCol {
+  display: grid;
+  grid-column: span 12;
+  grid-template-columns: subgrid;
+  grid-template-rows: subgrid;
+}
+
+.mainCol {
+  display: grid;
+  grid-column: 3/ span 8;
 }
