--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -301,6 +301,11 @@ p {
   padding: 5vh 0;
   background-color: $my-main;
 
+  h1 {
+    text-align: center;
+    color: $my-tone;
+  }
+
   .quote {
     background-color: $my-neutral;
     border-radius: 16px;
@@ -322,6 +327,7 @@ p {
     .name {
       font-size: 20pt;
       font-weight: 600;
+      color: $my-black;
     }
 
     p {
@@ -340,6 +346,8 @@ p {
 
 #about {
   padding: 10vh 0;
+  color: $my-black;
+
   .sign {
     text-align: left;
     width: 29vw;
@@ -474,8 +482,12 @@ form {
   }
 
   fieldset {
-    margin: 15vh 0;
+    margin: 5vh 0;
   }
+}
+
+#timeslot {
+  margin: 0 2vw 1vw 0;
 }
 
 .unavailable,
@@ -613,6 +625,11 @@ form {
       display: none !important;
     }
   }
+  form {
+    fieldset {
+      margin: 10vh 0;
+    }
+  }
   .hamburger {
     display: block;
     position: fixed;
@@ -656,7 +673,10 @@ form {
       font-size: 2.5em !important;
     }
     .prompt {
-      margin-top: calc(75px - 4vh);
+      margin-top: calc(104px - 4vh);
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 1em;
     }
     .circle {
       width: 42px;
@@ -665,7 +685,7 @@ form {
   }
 
   button {
-    width: 125px;
+    width: 110px;
     height: 40px;
     font-size: 0.7em !important;
   }
